# CITS5507-Project

./: CMakeLists.txt  Matrix.c  Matrix.h  README.md  argHandler.c  argHandler.h  convolve.c  convolve.h  fileHelper.c  fileHelper.h  main.c  makefile  report.md
examples/: o.txt
